packages/svelte/tests/compiler-errors/samples/unbalanced-curly-element/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'attribute_unquoted_sequence',
		message: 'Invalid attribute expression',
		position: [34, 71]
	}
});
